# pairipcore-vm

./: .buildinfo  .clang-format  .gitignore  README.md  automation.html  cfg.html  genindex.html  index.html  instructions.html  introduction.html  objects.inv  py-modindex.html  pyproject.toml  requirements.docs.txt  requirements.tools.txt  requirements.txt  search.html  searchindex.js  strings.html
.github/workflows/: sphinx-docs.yml
_modules/: index.html
_modules/pairipcore/: cfg.html  context.html  disassembler.html  insn.html  strings.html
_sources/: automation.md  cfg.md  index.md  instructions.md  introduction.md
_sources/pairipvm/: index.md  operations.rst
_sources/pyapi/: context.rst  decompiler.rst  strings.rst
assets/: data.vmcode
cxx/: CMakeLists.txt
cxx/include/pairipvm/: context.h  hash.h  insn.h  pairipvm.h  types.h  vm.h
cxx/include/pairipvm/ops/: binary_op.h  compound_op.h  memory_ops.h  op_type.h  opdefs.h  unary_op.h
cxx/src/: main.cpp
cxx/src/pairipvm/: insn.cpp  opdefs.cpp  pairipvm_opcode_table.inc  vm.cpp
decompiler/: design.html  insn_format.html
docs/source/: conf.py  index.md  instructions.md  strings.md
include/gvm/: _vm_ops.h  dispatcher.h  jni-ghidra.h  types.h
pairipcore/: __init__.py  _types.py  cfg.py  context.py  disassembler.py  insn.py  opcode.py  strings.py
pairipcore/decompiler/: __init__.py  _decompiler.py  code.py  handler.py  (+1 more)
pairipvm/: idea.html  index.html  operations.html
pyapi/: context.html  decompiler.html  insn.html  strings.html
tools/: cfg.py  decompile.py  disasm.py  strings_scanner.py
(+110 files in other folders)
